命名変更、エラー修正
